syntax = "proto3";

message Task {
    int64 task_id = 1;
    string configuration = 2;
    repeated File files = 3;
    repeated Test tests = 4;

    message File{
        string name = 1;
        bytes content = 2;
    }

    message Test{
        int64 test_id = 1;
        string input = 2;
        string output = 3;
        int64 time_limit = 4;
        int64 ram_limit = 5;
    }
}

message TaskResult {
    int64 result_id = 1;
    string compilation_log = 2;
    repeated TestResult tests_results = 3;

    message TestResult {
        int64 source_test_id = 1;
        Status status = 2;
        int64 execution_time = 3;
        int64 ram_usage = 4;
    }

    enum Status{
        OK = 0;
        RTE = 1;
        MEM = 2;
        TLE = 3;
        ANS = 4;
        CME = 5;
    }
}